--- a/src/Web/RecipeBook.Web/Views/Home/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Home/Index.cshtml
@@ -3,14 +3,16 @@
 @{ this.ViewData["Title"] = "Home Page"; }
 
 <form id="keyForm" method="Post"></form>
+<div asp-validation-summary="All" class="text-danger"></div>
 
 <div class="container">
-    <form class="form-inline justify-content-center" asp-action="Search" method="post">
-            <input asp-for=@Model.SearchData.Text class="search-form form-control" placeholder="Search..." id="searchBox" type="text">
-            <button type="submit" class="btn btn-default" aria-label="Left Align">
-                <span class="fas fa-search" aria-hidden="true"></span>
-            </button>
-        
+    <form class="form-inline justify-content-center" asp-action="Search" method="post">        
+        <input asp-for=@Model.SearchData.Text class="search-form form-control" placeholder="Search..." id="searchBox" type="text">
+        <span asp-validation-for=@Model.SearchData.Text class="text-danger"></span>
+        <button type="submit" class="btn btn-default" aria-label="Left Align">
+            <span class="fas fa-search" aria-hidden="true"></span>
+        </button>
+
     </form>
 
 
