--- a/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
@@ -3,34 +3,35 @@
 @{
     int elCount = Model.ResultItems.Count();
     if (elCount != 0)
-    {
+    {       
         foreach (var item in Model.ResultItems)
         {
             var currentImageSource = item.ImagePath;
+
 
             <li class="media" id=@item.Id>
                 <img class="align-self-center mr-3" src=@currentImageSource asp-append-version="true"
                      title=@item.Name width="100" height="100">
                 <div class="media-body mr-3">
                     <h5 class="mt-0 mb-1">@item.Name</h5>
-                    <div class='rating-stars mb-0'>
-                        <ul id='stars'>
-                            <li class='star' title='Poor' data-value='1'>
+                    <div class='rating-stars mb-0'title="Taste:">
+                        <ul id='stars' data-value='@item.Id,@item.TasteRate'>
+                            <li class='star' title='Poor' data-value='1' onmouseover="onStartMouseOver(this)" onmouseout="onStartMouseOut(this)" onclick="onStarClick(this)">
                                 <i class='fa fa-star fa-fw'></i>
                             </li>
-                            <li class='star' title='Fair' data-value='2'>
+                            <li class='star' title='Fair' data-value='2' onmouseover="onStartMouseOver(this)" onmouseout="onStartMouseOut(this)" onclick="onStarClick(this)">
                                 <i class='fa fa-star fa-fw'></i>
                             </li>
-                            <li class='star' title='Good' data-value='3'>
+                            <li class='star' title='Good' data-value='3' onmouseover="onStartMouseOver(this)" onmouseout="onStartMouseOut(this)" onclick="onStarClick(this)">
                                 <i class='fa fa-star fa-fw'></i>
                             </li>
-                            <li class='star' title='Excellent' data-value='4'>
+                            <li class='star' title='Excellent' data-value='4' onmouseover="onStartMouseOver(this)" onmouseout="onStartMouseOut(this)" onclick="onStarClick(this)">
                                 <i class='fa fa-star fa-fw'></i>
                             </li>
-                            <li class='star' title='WOW!!!' data-value='5'>
+                            <li class='star' title='WOW!!!' data-value='5' onmouseover="onStartMouseOver(this)" onmouseout="onStartMouseOut(this)" onclick="onStarClick(this)">
                                 <i class='fa fa-star fa-fw'></i>
                             </li>
-                            <li class="list-inline-item"><p class="text-muted">4.5 (413)</p></li>
+                            <li class="list-inline-item"><p class="text-muted" id="taste_rate"></p></li>
                         </ul>
                     </div>
                     <p class="text-justify text-truncate" style="max-width: 200px;">
