--- a/src/Web/RecipeBook.Web/Views/Home/Search.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Home/Search.cshtml
@@ -17,6 +17,6 @@
 
 
 @section Scripts {
-    <script src="~/js/searchView.js" asp-append-version="true"></script>
+    <script src="~/js/homeSearchView.js" asp-append-version="true"></script>
     <script src="~/js/sideBarView.js" asp-append-version="true"></script>
 }
